Fix tag alignment in article-preview

--- a/_sass/_components/_article-preview.scss
+++ b/_sass/_components/_article-preview.scss
@@ -11,7 +11,11 @@
 		font-size: 12px;
 		font-weight: $normal;
 		font-style: italic;
-	}			
+	}	
+
+	.tag-wrapper {
+		justify-content: flex-start;
+	}		
 }
 
 .article-preview-heading {
